--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
 }
 
+
 body {
     font-family: 'Poppins', sans-serif;
     display: flex;
@@ -18,6 +19,23 @@ body {
 
 body .container {
     max-width: 1000px;
+}
+
+body .container .navbar {
+    justify-content: center;
+    display: inline-flex;
+    background-color: #202020;
+    white-space: 13px;
+}
+
+body .container .navbar .linkclass {
+    margin: 4px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+body .container .navbar .linkclass:hover {
+    text-decoration: underline;
 }
 
 body .container header {
